@@ -3,6 +3,7 @@ v4.7.8
  - Fixed issue with fetching subscriptions
  - Removed setting checkForNewSubscriptions
  - Fixed issue with Edge01 floatplane servers no longer working but still being the default the api returns
+ - Fixed issue with non LTT subscriptions not properly working due to a missing ignore setting
 
 v4.2.7
  - Changed videos.json and partial.json to have some locking for writing out files to avoid corruption
